Made blog post about my Common App Essay from 2017

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,24 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'Common App College Essay'
+date: 2017-12-31
+permalink: /posts/2017/12/common-app-college-essay/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - college essay
+  - admissions
 ---
+# On the Common App Essay
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+This is my Common App essay from 2017. I thought I'd post it so some other people might benifit from it. Enjoy!
 
-Headings are cool
-======
+# Like Moses
+I am like Moses from the Bible: discontent with simply talking to the rock: *“God: Speak to the rock… [But] Moses struck the rock” (Numbers 20)*.
 
-You can have many headings
-======
+An ungodly itch implores me to touch the stone. Verify it is rough, rugged. As a rock climber, Moses felt this way too. The pyramids dominated his youth. And though it was no Everest, he completed a 40-day climbing expedition up *Har Sinai*. There, he received his favorite rocks -- the ten commandments. Like Moses, I am unable to resist the lure of the granite boulders that shape my character.
 
-Aren't headings cool?
-------
+*The bedrock*. Earth’s ancient substratum supports mountains, shaping the composition and structure of every hill and valley. Similarly, my parents, acting as my foundation, imbued a love of learning deep within my subconscious. During summers at the beach, they explained structural designs from seashells, architecture from sandcastles, and science from the pull of the ocean tide. As learning from the world around me became an autonomic function, everyday life evolved into an educational opportunity. Unassuming and underground, my parents deliberately established a foundation of intellectual curiosity that tethers me throughout my lifelong intellectual and emotional climb.
+
+*The footwork*. A climber’s steps require a calibrated tension, demanding toes that can grip crumbling crevices and feet able to reliably withstand sudden shifts in position and weight. Navigating complex social situations similarly demands sure footing as I must conduct interactions with sensitivity and curiosity. In the aftermath of a blizzard, I disarmed a tired snow-plow driver with an innocent wave and a warm grin. Joking about the now-balmy weather, I convinced him to construct a monstrous sledding ramp in our yard. I was a hero to my brothers, impatiently waiting with sleds in hand. The pedestal they put me on quickly melted as we realized he built the nine foot ramp in our neighbor’s driveway. Carefully selecting my words, I navigated the uncomfortable conversation and offered an apology that my neighbors accepted with generous amusement. Aware of the tension inherent in social interactions, I paid close attention to each step I took..
+
+*The handholds*. Though granite outcroppings and tree branches bring climbers to new heights, they also allow them to move sideways, sliding crablike across the mountain. My mental energy proceeds along similarly nonlinear trajectories, ever-progressing both up *and* across unconventional paths. To resolve writer's block, I often delve into past writing assignments, seeking elusive perfection from pieces completed years earlier. I rework jagged metaphors and distill sticky phrases into honeyed compositions as an epic challenge to my sense of perfection. As I edit, I revisit old thought patterns, assessing my growth in a sidelong, retrospective glance. My own path, halting and indirect, propels me farther and ultimately higher than the most meticulously plotted upward course.
+
+I will spend my entire life reaching heavenward from stony perches, hoping I never arrive at the mountaintop. Reaching the summit means my adventure is complete, fully satisfying the whims of my inquisitive mind, gregarious personality, and nonlinear thinking. I want to remain climbing forevermore, my thirst for knowledge never quenched, my yearning for social interactions never satiated, and my adventure never completed. The limitless climb drives me forward. Unlike Moses, I hope I never reach the promised land.
